fix: fix broken paragraph

--- a/animais-fantasticos/index.html
+++ b/animais-fantasticos/index.html
@@ -150,9 +150,11 @@
             Também apresentam como particularidade suas pupilas ovais,
             semelhantes às pupilas verticais dos felídeos.
           </p>
-          De cerca de 40 espécies reconhecidas como raposas, somente 12
-          pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a raposa
-          vermelha é a mais comum.
+          <p>
+            De cerca de 40 espécies reconhecidas como raposas, somente 12
+            pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a
+            raposa vermelha é a mais comum.
+          </p>
           <p>
             Também apresentam como particularidade suas pupilas ovais,
             semelhantes às pupilas verticais dos felídeos.
