--- a/animais-fantasticos/index.html
+++ b/animais-fantasticos/index.html
@@ -18,7 +18,7 @@
     </script>
   </head>
   <body>
-    <header class="menu">
+    <header class="menu js-menu">
       <ul>
         <li><a href="#animais">Animais</a></li>
         <li><a href="#faq">FAQ</a></li>
