--- a/animais-fantasticos/index.html
+++ b/animais-fantasticos/index.html
@@ -26,7 +26,7 @@
         <li><a href="https://github.com/ndroher">DEV →</a></li>
       </ul>
     </header>
-    <main class="grid-section animais" id="animais">
+    <main class="grid-section animais js-scroll" id="animais">
       <h1 class="titulo">Animais Fantásticos</h1>
       <ul class="animais-lista js-tabmenu">
         <li><img src="./img/imagem1.jpg" alt="Foto de uma Raposa" /></li>
@@ -165,7 +165,7 @@
         </section>
       </div>
     </main>
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
       <h1 class="titulo">FAQ</h1>
       <dl class="faq-lista js-accordion">
         <dt>Qual a idade dos animais?</dt>
@@ -192,7 +192,7 @@
         </dd>
       </dl>
     </section>
-    <section class="grid-section contato" id="contato">
+    <section class="grid-section contato js-scroll" id="contato">
       <h1 class="titulo">Contato</h1>
       <div class="mapa">
         <img src="./img/mapa.png" alt="Mapa do Endereço" />
