--- a/le-scone_sass/index.html
+++ b/le-scone_sass/index.html
@@ -7,5 +7,28 @@
     <link rel="stylesheet" href="/le-scone_sass/css/style.css" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <div class="home">
+        <div class="home__left">
+          <img src="/le-scone_sass/img/lescone.png" alt="logo le scone" />
+          <div class="home__left__info">
+            <p>
+              De Seg. à Sab. <span class="aberto"></span><br />
+              das 07:00h às 18:00h
+            </p>
+            <p>
+              Praia de Botafogo, 300<br />
+              Rio de Janeiro - RJ
+            </p>
+            <p>+55 021 2412-3333</p>
+          </div>
+          <span class="home-detalhe">/ / / /</span>
+        </div>
+        <div class="home__right">
+          <img src="/le-scone_sass/img/foto.png" alt="cozinha le scone" />
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
