--- a/le-scone_sass/index.html
+++ b/le-scone_sass/index.html
@@ -29,6 +29,40 @@
           <img src="/le-scone_sass/img/foto.png" alt="cozinha le scone" />
         </div>
       </div>
+      <div class="menu">
+        <div class="menu__title">
+          <div class="menu__title__div">
+            <h1>Menu</h1>
+            <span></span>
+          </div>
+        </div>
+        <div class="menu__cardapio">
+          <div class="menu__cardapio__entradas">
+            <h1>Entradas</h1>
+            <ul>
+              <li><span>R$1,70</span>Ovos Mexidos</li>
+              <li><span>R$2,70</span>Scones de Frutas</li>
+              <li><span>R$3,70</span>Joelho de Queijo</li>
+              <li><span>R$4,70</span>Presunto Cozido</li>
+              <li><span>R$3,70</span>Coxinha de Frango</li>
+            </ul>
+          </div>
+          <div class="menu__cardapio__principais">
+            <h1>Pratos Principais</h1>
+            <ul>
+              <li><span>R$10,70</span>Penne com Queijo</li>
+              <li><span>R$22,70</span>Feijoada</li>
+              <li><span>R$33,70</span>Costela ao Molho</li>
+              <li><span>R$14,70</span>Medalhão de Frango</li>
+              <li><span>R$13,70</span>Strogonoff de Frango</li>
+            </ul>
+          </div>
+        </div>
+        <div class="menu__imagens">
+          <img src="/le-scone_sass/img/prato-1.png" alt="Foto Prato 1" />
+          <img src="/le-scone_sass/img/prato-2.png" alt="Foto Prato 2" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
