feat: add contato

--- a/le-scone_sass/index.html
+++ b/le-scone_sass/index.html
@@ -63,6 +63,45 @@
           <img src="/le-scone_sass/img/prato-2.png" alt="Foto Prato 2" />
         </div>
       </div>
+
+      <div class="contato">
+        <div class="contato__title">
+          <div class="contato__title__div">
+            <h1>Contato</h1>
+            <span></span>
+          </div>
+        </div>
+        <div class="contato__main">
+          <form action="">
+            <div>
+              <label for="nome">Nome</label>
+              <input type="text" name="" id="" />
+            </div>
+            <div>
+              <label for="email">E-mail</label>
+              <input type="email" name="" id="" />
+            </div>
+            <div>
+              <label for="telefone">Telefone</label>
+              <input type="tel" name="" id="" />
+            </div>
+            <div>
+              <label for="mensagem">Mensagem</label>
+              <textarea name="" id="" cols="30" rows="6"></textarea>
+            </div>
+            <input class="btn" type="button" value="Enviar" />
+            <div class="forms__info">
+              <p>contato@lescone.com ////</p>
+              <p>+55 021 2412-3333 ////</p>
+            </div>
+          </form>
+          <img
+            class="contato__mapa"
+            src="/le-scone_sass/img/map.png"
+            alt="Mapa Endereço"
+          />
+        </div>
+      </div>
     </div>
   </body>
 </html>
