feat: add footer

--- a/le-scone_sass/index.html
+++ b/le-scone_sass/index.html
@@ -103,5 +103,9 @@
         </div>
       </div>
     </div>
+    <div class="footer">
+      <p>Le Scone © 1989 - 2016. CSS com SASS</p>
+      <img src="/le-scone_sass/img/lescone-icone.png" alt="logo le scone" />
+    </div>
   </body>
 </html>
